Bug 139128 - FILESAVE DOCX Paragraph break in Editeng textbox not saved
Summary: FILESAVE DOCX Paragraph break in Editeng textbox not saved
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.5.0 target:7.4.0.2
Keywords: filter:docx, implementationError
Depends on:
Blocks: DOCX-Textbox
  Show dependency treegraph
 
Reported: 2020-12-21 15:04 UTC by NISZ LibreOffice Team
Modified: 2022-07-25 11:48 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Writer (8.96 KB, application/vnd.oasis.opendocument.text)
2020-12-21 15:04 UTC, NISZ LibreOffice Team
Details
The original file saved by Writer (5.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-12-21 15:05 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Writer (46.05 KB, image/png)
2020-12-21 15:05 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-12-21 15:04:34 UTC
Created attachment 168382 [details]
Example file from Writer

This is reduced from attachment #134738 [details] of bug #109218
When saving an Editeng textbox to DOCX format with a paragraph break in the text, the break is not saved.

Steps to reproduce:
    1. Insert – Text box 
    2. Add some text to the textbox, separate it to rows with paragraph break (Shift+Enter)
    3. Save as docx, reload

Actual results:
No paragraph break.

Expected results:
Paragraph break should be retained.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 315c7570c4a72f4c834086082825533b1e50d1bf
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Also in:

Version: 6.0.0.3
Build ID: 64a0f66915f38c6217de274f0aa8e15618924765
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: en-US (hu_HU); Calc: CL

Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: hu-HU (hu_HU)

Version 4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)

In 3.6 the shape was exported without any text.
Comment 1 NISZ LibreOffice Team 2020-12-21 15:05:35 UTC
Created attachment 168383 [details]
The original file saved by Writer
Comment 2 NISZ LibreOffice Team 2020-12-21 15:05:53 UTC
Created attachment 168384 [details]
Screenshot of the original and exported document side by side in Writer
Comment 3 Dieter 2021-01-06 07:52:33 UTC
I confirm it with

Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 4 Commit Notification 2022-07-22 10:50:32 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7a294af40521d71e6583dad2908e09f3758649c

tdf#139128 DOCX: fix export of line break in text frames

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-07-23 12:08:13 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/14c4c6c1d764142a0f0ca8c02ccd2028d378e21e

tdf#139128 DOCX: fix export of line break in text frames

It will be available in 7.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-07-25 11:48:11 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 41f02927b6d8470c298c8a2f407c98420a5ebe24
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL