tdf#139128 DOCX: fix export of line break in text frames

Line breaks (text:line-break) of ODF text frames
(draw:text-box) were lost during DOCX export.

Change-Id: I2e1149234749437ceef0d4643b0e686d5ae92156
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136998
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 024d75681887dd33561917cb3ff6b213924fd59d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137327
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>